# pg-task-tracker

./: LICENSE  README.md  pyproject.toml
src/pg_task_tracker/: __init__.py  _state.py  decorator.py  models.py  schema.py  tracker.py
src/pg_task_tracker/migrations/: 001_initial.sql
src/simple_task/: __init__.py  _types.py  models.py  schema.py  tracker.py
src/simple_task/migrations/: 001_initial.sql
tests/: conftest.py  test_decorator.py  test_pg_task_tracker.py  test_simple_task.py  test_tracker.py
