[project]
name = "pg-task-tracker"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "craig stevenson", email = "craig.stevenson@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://github.com/craig-stevenson/pg-task-tracker"
Repository = "https://github.com/craig-stevenson/pg-task-tracker"
Issues = "https://github.com/craig-stevenson/pg-task-tracker/issues"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty",
    "pytest",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unresolved-reference = "error"
unresolved-import = "error"
